apps/collection-editor-frontend/src/app/modules/editor/table-edit/table-edit.component.scss
.container {
  background-color: #f2f2f2;
  margin: 0 10%;
  &__line {
    border-bottom: 2px solid #d8d8d8;
  }
  &__table {
    display: flex;
    flex-direction: column;
    &__search-add {
      display: flex;
      justify-content: space-between;
    }
    &__full-view {
      background-color: white;
      height: 100%;
      padding: 60px;
      overflow: auto;
      min-height: 50vh;
    }
    &__add {
      display: flex;
      justify-content: flex-end;
      margin: 15px 0 35px 0;
      &__button {
        height: 30px;
        background-color: #dde4eb;
        border-radius: 5px;
        border: none;
        cursor: pointer;
        margin-left: 20px;
      }
    }
  }
  &__title {
    &__title {
      margin: 30px 0 10px 0;
    }
  }
}

.action-button {
  border: none;
  background-color: transparent;
  cursor: pointer;
}

.popup {
  position: fixed;
  display: flex;
  align-self: flex-end;
  width: 40vw;
  background-color: red;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 10px;
}

.close-button {
  border: none;
  span {
    display: inline-block;
    transform: rotate(-90deg);
  }
}

td.mat-cell,
td.mat-footer-cell,
th.mat-header-cell {
  min-width: 100px;
  max-width: 100px;
  padding: 0 10px;
}

.input-filter {
  max-width: 100px;
  margin: 10px 8px;
  padding: 0;
}

.input-filter:first-of-type {
  margin: 10px 8px;
  margin-left: 20px;
}

.td-filter {
  display: flex;
}

.advanced-search {
  margin: 10px 0;
  min-width: 75%;
}

.hint {
  font-size: 12px;
  margin: 5px 0;
}

